--- a/laboratory/Lab1/pd_controller.ipynb
+++ b/laboratory/Lab1/pd_controller.ipynb
@@ -4,25 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A PD controller to move every joint\n",
+    "# Closing the loop with a PD controller\n",
     "\n",
     "We have seen in the previous notebook how to do a simple control loop that read sensors and applied torque commands. However, we did not use the sensor measurements to compute the torque commands.\n",
     "\n",
     "Now we would like to do our first closed-loop controller. We will design a simple Proportional-Derivative (PD) position controller. The goal of the controller is to compute a command that will move the joints of the robot to a desired position.\n",
     "\n",
-    "Assume that we want the first joint, with measurement position $\\theta$, to move to the desired position $\\theta_{des}$. The idea is to apply a command proportional to the error between the measured and desired position (the P in PD controller).\n",
-    "The controller will be $\\tau = P (\\theta_{des} - \\theta)$ where $P$ is a constant.\n",
+    "Assume that we want the first joint, with measurement position $\\theta$, to move to the desired position $\\theta_{des}$. The idea is to apply a command proportional to the error between the measured and desired position (the P in PD controller). The  error is\n",
+    "$$\\textrm{error} = (\\theta_{des} - \\theta)$$  and\n",
+    "the controller will be $\\tau = P \\cdot \\textrm{error} = P (\\theta_{des} - \\theta)$ where $P$ is a constant.\n",
     "\n",
-    "However, when using only a term proportional to the position, the controller will tend to create oscillations and get easily unstable (you can try!). It is then a good idea to add a term proportional to the derivative of the error (the D term). The derivative of the error is\n",
-    "$$\\textrm{error} = (\\theta_{des} - \\theta)$$\n",
-    "and its derivative is\n",
+    "However, when using only a term proportional to the position, the controller will tend to create oscillations and get easily unstable (you can try!). It is then a good idea to add a term proportional to the time derivative of the error (the D term). \n",
+    "The time derivative of the error is\n",
     "$$\\frac{d}{dt}\\textrm{error} = \\frac{d}{dt}(\\theta_{des} - \\theta) =  \\dot{\\theta}_{des} - \\dot{\\theta}$$\n",
     "\n",
     "So a PD controller takes the general form\n",
     "$\\tau = P (\\theta_{des} - \\theta) + D (\\dot{\\theta}_{des} - \\dot{\\theta})$\n",
     "where $P$ and $D$ are positive numbers called the **PD gains**\n",
+    "Intuitively it applies a command that tries to follow at the same time a desired position and a desired velocity (which dampens fast oscillations).\n",
     "\n",
-    "When we want to be in a static position $\\dot{theta}_{des}$ will be 0, but if we want to follow a trajectory $\\dot{theta}_{des}(t)$ which varies over time, the derivative will not be 0 anymore."
+    "When we want to be in a static position, $\\dot{\\theta}_{des}$ will be 0, but if we want to follow a trajectory $\\theta_{des}(t)$ which varies over time, the derivative $\\dot{\\theta}_{des}(t)$ will not be 0 anymore."
    ]
   },
   {
@@ -92,9 +93,10 @@
     "    measured_positions[i,:] = q\n",
     "    measured_velocities[i,:] = dq\n",
     "    \n",
-    "    # we compute the desired torques\n",
-    "    error = q_des - q\n",
-    "    d_error = dq_des-dq\n",
+    "    error = q_des - q # the position error for all the joints (it's a 3D vector)\n",
+    "    d_error = dq_des-dq # the velocity error for all the joints\n",
+    "    \n",
+    "    # we compute the desired torques as a PD controller\n",
     "    joint_torques = P * error + D * d_error\n",
     "    desired_torques[i,:] = joint_torques\n",
     "    \n",
@@ -142,7 +144,7 @@
     "\n",
     "2. Tune the P and D gains to have a good tracking of the positions $[0,0,\\frac{\\pi}{2}]$ without any oscillations. The P and D gains need not be the same for different joints. What gains did you find? Plot the position and velocities of each joints as a function of time with these gains. (starting from the original initial robot configuration).\n",
     "\n",
-    "3. Use the PD controller to do the following task: keep the position of the first two joints fixed and follows the following trajectory for the last joint $0.8 \\sin(\\pi t)$. Plot the results (positions and velocities as a function of time for all joints). Simulate for at least 10 seconds.\n",
+    "3. Use the PD controller to do the following task: keep the position of the first two joints fixed and follows the following position trajectory for the last joint $0.8 \\sin(\\pi t)$. Plot the results (positions and velocities as a function of time for all joints). Simulate for at least 10 seconds.\n",
     "\n",
     "4. Change the joint trajectories to get the robot to draw a circle in the air with its fingertip."
    ]
