--- a/laboratory/Lab5/Velocity control of the foot.ipynb
+++ b/laboratory/Lab5/Velocity control of the foot.ipynb
@@ -101,9 +101,9 @@
     "Here $\\boldsymbol{\\theta} = [\\theta_0, \\theta_1, \\theta_2]$ is the vector containing all the joint positions.\n",
     "We will generate directly generate trajectories for the foot and follow them without ever explicitly computing the inverse kinematics of the robot.\n",
     "\n",
-    "If we only look at the linear velocity of point O (i.e. the velocity of the foot with respect to the spatial frame), we can decompose the Jacobian into two part (the top 3 rows are associated to the angular velocity of the foot and the bottom 3 are associated to the linear velocity): $$J_O(\\boldsymbol{\\theta}) = \\begin{bmatrix} J_{O\\omega} \\\\ J_{O\\omega} \\end{bmatrix}$$\n",
+    "If we only look at the linear velocity of point O (i.e. the velocity of the foot with respect to the spatial frame), we can decompose the Jacobian into two part (the top 3 rows are associated to the angular velocity of the foot and the bottom 3 are associated to the linear velocity): $$J_O(\\boldsymbol{\\theta}) = \\begin{bmatrix} J_{O\\omega} \\\\ J_{Ov} \\end{bmatrix}$$\n",
     "and we can write the velocity equation as\n",
-    "$$\\mathcal{V}_{SO}^O = \\begin{pmatrix} \\omega_O \\\\ v_O \\end{pmatrix} = \\begin{bmatrix} J_{O\\omega} \\\\ J_{O\\omega} \\end{bmatrix} \\cdot \\dot{\\boldsymbol{\\theta}}$$\n",
+    "$$\\mathcal{V}_{SO}^O = \\begin{pmatrix} \\omega_O \\\\ v_O \\end{pmatrix} = \\begin{bmatrix} J_{O\\omega} \\\\ J_{Ov} \\end{bmatrix} \\cdot \\dot{\\boldsymbol{\\theta}}$$\n",
     "\n",
     "So the linear velocity of the foot is $$v_O = J_{Ov} \\dot{\\boldsymbol{\\theta}}$$\n",
     "\n",
@@ -323,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
