--- a/laboratory/Lab6/Impedance_control.ipynb
+++ b/laboratory/Lab6/Impedance_control.ipynb
@@ -105,18 +105,18 @@
     "$$K = \\begin{bmatrix} K_x & 0 & 0 \\\\ 0 & K_y & 0 \\\\ 0 & 0 & K_z \\end{bmatrix}$$\n",
     "\n",
     "To implement this behavior, one can simply set the torques on the motors of the robot as\n",
-    "$$ \\tau = J_O^T K (p_0 - p_{measured})$$ The leg will then behave like a spring.\n",
+    "$$ \\tau = J_{Ov}^T K (p_0 - p_{measured})$$ The leg will then behave like a spring.\n",
     "Note here that we are only using the bottom three rows of the Jacobian, as we are only interested in the force and not the moments (which we ignore).\n",
     "\n",
     "In addition to a spring, it is often a good idea to have a damper, that will dampen out any oscillations of the spring such that the leg can reach its rest position $p_0$ (otherwise it would oscillate forever). We can then also add a force conteracting velocity of the foot as\n",
     "$-D \\dot{p}_{measured}$, where $D$ is a diagonal matrix that contains the damping gains for each spring.\n",
     "\n",
     "The resulting controller is then\n",
-    "$$\\tau = J_O^T \\Big( K (p_0 - p_{measured}) - D \\dot{p}_{measured} \\Big)$$\n",
+    "$$\\tau = J_{Ov}^T \\Big( K (p_0 - p_{measured}) - D \\dot{p}_{measured} \\Big)$$\n",
     "\n",
     "If one wants to track desired setpoint positions (e.g. a trajectory of setpoints) and maybe also a desired velocity,\n",
     "we can easily adapt the impedance controller as follows\n",
-    "$$\\tau = J_O^T \\Big( K (p_{ref}(t) - p_{measured}) + D (\\dot{p}_{ref}(t) - \\dot{p}_{measured}) \\Big)$$\n",
+    "$$\\tau = J_{Ov}^T \\Big( K (p_{ref}(t) - p_{measured}) + D (\\dot{p}_{ref}(t) - \\dot{p}_{measured}) \\Big)$$\n",
     "where $p_{ref}(t)$ is a reference trajectory of set points. Note here how this resembles a PD controller in the end-effector space.\n",
     "\n",
     "\n",
@@ -126,7 +126,7 @@
     "2. Redo the same experiment when adding damping in the y direction $D_y = .1$ and then again with $D_y = 1$. Plot again the end-effector positions and velocities, what do you notice different? (make sure you start the robot with initial configuration $q=[0,0,0]$).\n",
     "3. Write an impedance controller that can draw a circle in the x-y plane. We would like to follow the 3D foot trajectory $$x_{ref}(t) = \\begin{pmatrix} 0.3 + 0.05\\cos(\\omega t) \\\\ -0.2 + 0.05 \\sin(\\omega t) \\\\ 0 \\end{pmatrix}$$\n",
     "where $\\omega = \\pi$ is the frequency of rotation around the circle (frequency of rotation of $0.5Hz$).\n",
-    "Use $K = [50,50,50]$ and $D = [5,5,5]$. Plot the desired and measured positions of the foot as well as the desired and measured velocities of the foot. Compare your results with what you did in Lab5. What are the pros and cons of both methods?\n",
+    "Use $K = \\text{Diag}([50,50,50])$ and $D = \\text{Diag}([5,5,5])$. Plot the desired and measured positions of the foot as well as the desired and measured velocities of the foot. Compare your results with what you did in Lab5. What are the pros and cons of both methods?\n",
     "4. (Optional) Test the controller(s) on the real robot and plot the same plots as for the simulation"
    ]
   },
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
