started changes for real robot compatibility

--- a/laboratory/Lab7/Grasping an object.ipynb
+++ b/laboratory/Lab7/Grasping an object.ipynb
@@ -56,8 +56,12 @@
    "source": [
     "# we create a robot simulation\n",
     "if use_real_robot:\n",
-    "    robot = NYUFingerReal()\n",
-    "    robot.initialize('enp5s0f1')\n",
+    "    robot1 = NYUFingerReal()\n",
+    "    robot1.initialize('enp5s0f1')\n",
+    "    \n",
+    "    robot2 = NYUFingerReal()\n",
+    "    robot2.initialize('eno1')\n",
+    "\n",
     "else:\n",
     "    robot1 = NYUFingerSimulator(robotStartPos = [0.,0.,0.])\n",
     "    robot1.add_box(friction=0.5)\n",
@@ -2149,7 +2153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
