updated lab5 question description

--- a/laboratory/Lab5/Velocity control of the foot.ipynb
+++ b/laboratory/Lab5/Velocity control of the foot.ipynb
@@ -136,8 +136,8 @@
     "## Questions\n",
     "1. Write a controller that can draw a circle in the x-y plane. We would like to follow the 3D foot trajectory $$x_{ref}(t) = \\begin{pmatrix} 0.3 + 0.05\\cos(\\omega t) \\\\ -0.2 + 0.05 \\sin(\\omega t) \\\\ 0 \\end{pmatrix}$$\n",
     "where $\\omega = \\pi$ is the frequency of rotation around the circle (frequency of rotation of $0.5Hz$).\n",
-    "2. Using the Jacobian, compute the velocity of the foot when performing the task\n",
-    "3. Plot the simulated trajectories of the foot (position and velocity) vs. the reference one\n",
+    "2. Using the Jacobian, compute the measured end-effector velocity of the foot when performing the task\n",
+    "3. Plot the measured end-effector position and velocity of the foot and the reference ones. The quantities should be graphed vs. time.\n",
     "4. Now write a controller that can do a \"figure 8\" in the x-y plan $$x_{ref}(t) = \\begin{pmatrix} 0.35 + 0.08\\sin(\\omega t) \\\\ -0.15 + 0.08 \\cos(\\omega t) \\sin(\\omega t) \\\\ 0 \\end{pmatrix}$$ and plot the results as before\n",
     "5. (Optional) Write a controller that can do the same \"figure 8\" in the x-z plane and plot the results as before\n",
     "6. (Optional) Test the controller(s) on the real robot and plot the same plots as for the simulation"
@@ -323,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
