--- a/laboratory/Lab5/solution.ipynb
+++ b/laboratory/Lab5/solution.ipynb
@@ -172,8 +172,8 @@
     "## Questions\n",
     "1. Write a controller that can draw a circle in the x-y plane. We would like to follow the 3D foot trajectory $$x_{ref}(t) = \\begin{pmatrix} 0.3 + 0.05\\cos(\\omega t) \\\\ -0.2 + 0.05 \\sin(\\omega t) \\\\ 0 \\end{pmatrix}$$\n",
     "where $\\omega = \\pi$ is the frequency of rotation around the circle (frequency of rotation of $0.5Hz$).\n",
-    "2. Using the Jacobian, compute the velocity of the foot when performing the task\n",
-    "3. Plot the simulated trajectories of the foot (position and velocity) vs. the reference one\n",
+    "2. Using the Jacobian, compute the measured end-effector velocity of the foot when performing the task\n",
+    "3. Plot the measured end-effector position and velocity of the foot and the reference ones. The quantities should be graphed vs. time.\n",
     "4. Now write a controller that can do a \"figure 8\" in the x-y plan $$x_{ref}(t) = \\begin{pmatrix} 0.35 + 0.08\\sin(\\omega t) \\\\ -0.15 + 0.08 \\cos(\\omega t) \\sin(\\omega t) \\\\ 0 \\end{pmatrix}$$ and plot the results as before\n",
     "5. (Optional) Write a controller that can do the same \"figure 8\" in the x-z plane and plot the results as before\n",
     "6. (Optional) Test the controller(s) on the real robot and plot the same plots as for the simulation"
@@ -233,8 +233,8 @@
     "desired_positions = np.zeros_like(measured_positions) # will store the desired positions we use in the PD controller\n",
     "desired_velocities = np.zeros_like(measured_positions) # will store the desired velocities\n",
     "\n",
-    "desired_foot_positions = np.zeros([num_steps, 3])\n",
-    "desired_foot_velocities = np.zeros([num_steps, 3])\n",
+    "reference_foot_positions = np.zeros([num_steps, 3])\n",
+    "reference_foot_velocities = np.zeros([num_steps, 3])\n",
     "\n",
     "simulation_time = np.zeros([num_steps]) # will store the running time\n",
     "\n",
@@ -280,8 +280,8 @@
     "                       0.05 * w * np.cos(w * t),\n",
     "                       0.])\n",
     "    \n",
-    "    desired_foot_positions[i] = x_ref\n",
-    "    desired_foot_velocities[i] = dx_ref\n",
+    "    reference_foot_positions[i] = x_ref\n",
+    "    reference_foot_velocities[i] = dx_ref\n",
     "    \n",
     "    Jov = kin.orientedJ[3:6, :]\n",
     "    x_vel[i], y_vel[i], z_vel[i] = Jov @ dq\n",
@@ -371,7 +371,7 @@
    "metadata": {},
    "source": [
     "### Q2\n",
-    "The foot velocity is the linear velocity of the frame {O}, hence\n",
+    "The end-effector velocity is the linear velocity of the frame {O}, hence\n",
     "$v_O = J_{Ov}\\dot{\\theta}$"
    ]
   },
