--- a/laboratory/Lab1/introduction_to_pybullet.ipynb
+++ b/laboratory/Lab1/introduction_to_pybullet.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction to PyBullet\n",
     "\n",
-    "PyBullet is a \"rigid body dynamics\" simulator, it means that it can simulate any articulated, rigid, robot. For example our NYU finger but also more complex robots, such as a humanoid, a quadruped or a hand. It can also simulate other objects and several robots at the same time.\n",
+    "[PyBullet](https://pybullet.org/wordpress/) is a \"rigid body dynamics\" simulator, it means that it can simulate any articulated, rigid, robot. For example our NYU finger but also more complex robots, such as a humanoid, a quadruped or a hand. It can also simulate other objects and several robots at the same time.\n",
     "\n",
     "## How does it work?\n",
     "\n",
@@ -167,6 +167,8 @@
     "dt = 0.001\n",
     "num_steps = int(run_time/dt)\n",
     "\n",
+    "### this is the simulation loop ###\n",
+    "### we do one step of simulation num_steps times ###\n",
     "for i in range(num_steps):\n",
     "    time.sleep(dt)\n",
     "    p.stepSimulation()"
@@ -186,12 +188,15 @@
     "\n",
     "measured_positions = np.zeros([num_steps,3])\n",
     "measured_velocities = np.zeros_like(measured_positions)\n",
-    "    \n",
+    "\n",
+    "\n",
+    "### this is the simulation loop ###\n",
+    "### we do one step of simulation num_steps times ###\n",
     "for i in range(num_steps):\n",
     "    time.sleep(dt)\n",
     "    p.stepSimulation()\n",
     "    \n",
-    "    # we access the joints\n",
+    "    # we access the joints and read each joint position and velocity #\n",
     "    joint_states = p.getJointStates(robotId, bullet_joint_ids)\n",
     "    for j in range(num_joints):\n",
     "        measured_positions[i,j] = joint_states[j][0]\n",
@@ -211,12 +216,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we create the time vector (as we simulated for 10 seconds)\n",
     "time = np.linspace(0., 10., num=num_steps)\n",
+    "\n",
+    "# we create a figure using matplotlib\n",
     "plt.figure(figsize=[6, 12])\n",
+    "\n",
+    "# for each joint we plot the measured position as a function of time\n",
     "for i in range(3):\n",
     "    plt.subplot(3,1,i+1)\n",
     "    plt.plot(time, measured_positions[:,i])\n",
     "    plt.ylabel(joint_names[i] + ' [rad]')\n",
+    "\n",
+    "# adding some labels\n",
     "plt.xlabel('Time[s]')\n",
     "plt.title('joint positions')"
    ]
@@ -234,6 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we do the same for velocities\n",
     "plt.figure(figsize=[6, 12])\n",
     "for i in range(3):\n",
     "    plt.subplot(3,1,i+1)\n",
@@ -251,18 +264,11 @@
     "\n",
     "More information about the simulator, robot models, etc can be found on the [simulator website](https://pybullet.org/wordpress/)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
