--- a/laboratory/Lab1/sensors_and_actuators.ipynb
+++ b/laboratory/Lab1/sensors_and_actuators.ipynb
@@ -211,7 +211,9 @@
     "3. Send the commands to the motors\n",
     "4. Repeat periodically (typically at a rate of ~100Hz to 1KHz)\n",
     "\n",
-    "The example was doing \"open loop\" control because we did not use the sensor measurement to compute the desired commands. \"Closed loop\" control will make use of the sensors to compute the control commands."
+    "The example was doing \"open loop\" control because we did not use the sensor measurement to compute the desired commands. \"Closed loop\" control will make use of the sensors to compute the control commands.\n",
+    "\n",
+    "<img src=\"control_loop.png\" width=600>"
    ]
   },
   {
