--- a/laboratory/Lab1/introduction_to_pybullet.ipynb
+++ b/laboratory/Lab1/introduction_to_pybullet.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The user can then decide to apply forces/torques on certain joints, like a motor would do and read all the available information from the simulator to emulate real sensors.\n",
     "\n",
-    "As a user, we then need to write a \"controller\" that decides what to do at each simulation step. We will discuss this in the next notebooks.\n"
+    "As a user, we then need to write a \"controller\" that decides what to do at each simulation step.\n"
    ]
   },
   {
