--- a/laboratory/Lab1/pd_controller.ipynb
+++ b/laboratory/Lab1/pd_controller.ipynb
@@ -99,7 +99,7 @@
     "measured_positions = np.zeros([num_steps,3])\n",
     "measured_velocities = np.zeros_like(measured_positions)\n",
     "desired_torques = np.zeros_like(measured_positions)\n",
-    "time = np.zeros_like(measured_positions)\n",
+    "time = np.zeros([num_steps])\n",
     "\n",
     "for i in range(num_steps):\n",
     "    # get the current time\n",
