--- a/laboratory/Lab4/Inverse_Kinematics_real_robot.ipynb
+++ b/laboratory/Lab4/Inverse_Kinematics_real_robot.ipynb
@@ -534,7 +534,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
