--- a/laboratory/Lab3/Inverse_Kinematics.ipynb
+++ b/laboratory/Lab3/Inverse_Kinematics.ipynb
@@ -8,6 +8,10 @@
     "\n",
     "The goal of today's laboratory is to work out the analytic inverse kinematics of the leg (in 2D). The inverse kinematics problem is the problem of find joint angles that would lead to a desired end-effector position (as opposed to the forward kinematics problem where we find end-effector positions given joint angles).\n",
     "\n",
+    "## Instructions\n",
+    "Answer all the questions below and submit a pdf with detailed answers to these questions, including the plots through Brightspace. You will also need to submit the Jupyter notebooks with the code used to answer the questions.\n",
+    "\n",
+    "\n",
     "## Robot model\n",
     "Consider the following kinematic model of the robot <img src=\"./3d_robot_model.png\" width=\"700\">\n",
     "\n",
