--- a/laboratory/Lab3/Inverse_Kinematics.ipynb
+++ b/laboratory/Lab3/Inverse_Kinematics.ipynb
@@ -8016,7 +8016,9 @@
     "\n",
     "2. Use the plotting function below to plot the motion of the foot in space and the joint position/velocity trajectories. How well does it go through the targets?\n",
     "\n",
-    "3. Answer question 2. with the real robot"
+    "3. Answer question 2. with the real robot\n",
+    "\n",
+    "4. Use the inverse kinematics function to draw a circle or a figure 8 (infinite symbol) in the x-y plane with the leg."
    ]
   },
   {
