updated lab 3 - removed last question

--- a/laboratory/Lab3/Inverse_Kinematics.ipynb
+++ b/laboratory/Lab3/Inverse_Kinematics.ipynb
@@ -8007,18 +8007,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A reaching controller\n",
-    "\n",
-    "# Question:\n",
+    "# Question 3: reaching controller\n",
     "The code below generates 3 target ball locations (and display them). Their locations are in the variable ball_position (a list containing 2D vectors of x,y positions).\n",
     "\n",
     "1. Modify the code below (our typical control loop with a PD controller) such that the robot moves from its current position to each ball successively. Use the inverse kinematics function to decide what the end joint angles should be. Interpolate the motion to the desired goal such that the total time for one reaching movement is T=2 seconds (i.e. go from initial configuration to ball1 in 2 seconds, from ball1 to ball2 in 2 seconds, etc).\n",
     "\n",
     "2. Use the plotting function below to plot the motion of the foot in space and the joint position/velocity trajectories. How well does it go through the targets?\n",
     "\n",
-    "3. Answer question 2. with the real robot\n",
-    "\n",
-    "4. Use the inverse kinematics function to draw a circle or a figure 8 (infinite symbol) in the x-y plane with the leg."
+    "3. [Optional] Answer question 2. with the real robot"
    ]
   },
   {
@@ -8073,8 +8069,14 @@
     "\n",
     "# here we create a list of ball positions and display them\n",
     "ball_positions = [np.array([0.597,-0.056]), np.array([0.521,0.12]), np.array([0.3,-0.225])]\n",
-    "for ball in ball_positions:\n",
-    "    robot.add_ball(ball[0], ball[1])  \n",
+    "if not use_real_robot:\n",
+    "    for ball in ball_positions:\n",
+    "        robot.add_ball(ball[0], ball[1])\n",
+    "else:\n",
+    "    # we wait\n",
+    "    for i in range(7500):\n",
+    "        robot.send_joint_torque(np.zeros([3,1]))\n",
+    "        robot.step()\n",
     "\n",
     "# the time to reach a goal\n",
     "time_to_goal = 2.0\n",
@@ -8099,7 +8101,6 @@
     "    measured_foot_position[i,:] = pose[0:3,3]\n",
     "    \n",
     "    # controller: TODO HERE IMPLEMENT YOUR CONTROLLER TO REACH ALL 3 TARGETS\n",
-    "    # compute the desired position and velocities for each joint separately using the compute_trajectory function\n",
     "    # the goal here is to compute q_des and dq_des that the PD controller will follow\n",
     "    # you will need some internal logic to decide which ball you are currently targetting, etc.\n",
     "\n",
@@ -10124,7 +10125,7 @@
     "    fig = plt.figure(figsize=(10,10))\n",
     "    \n",
     "    plt.subplot(3,2,1)\n",
-    "    plt.plot(time, th[:,0], 'b-', time, th_des[:,1], '--k')\n",
+    "    plt.plot(time, th[:,0], 'b-', time, th_des[:,0], '--k')\n",
     "    plt.ylabel(r'$\\theta_0$')\n",
     "    plt.subplot(3,2,3)\n",
     "    plt.plot(time, th[:,1], 'b-', time, th_des[:,1], '--k')\n",
@@ -10135,7 +10136,7 @@
     "    plt.xlabel('Time [s]')\n",
     "    \n",
     "    plt.subplot(3,2,2)\n",
-    "    plt.plot(time, dth[:,0], 'b-', time, dth_des[:,1], '--k')\n",
+    "    plt.plot(time, dth[:,0], 'b-', time, dth_des[:,0], '--k')\n",
     "    plt.ylabel(r'$\\dot{\\theta}_0$')\n",
     "    plt.subplot(3,2,4)\n",
     "    plt.plot(time, dth[:,1], 'b-', time, dth_des[:,1], '--k')\n",
