changed goal locations

--- a/laboratory/Lab5/Velocity control of the foot.ipynb
+++ b/laboratory/Lab5/Velocity control of the foot.ipynb
@@ -176,7 +176,7 @@
     "desired_foot_position = np.zeros([num_steps,3])\n",
     "\n",
     "# here we create a list of ball positions and display them\n",
-    "ball_positions = [np.array([0.597,-0.056]), np.array([0.521,0.12]), np.array([0.3,-0.225])]\n",
+    "ball_positions = [np.array([0.4,-0.056, 0.02]), np.array([0.521,-0.1, 0.02]), np.array([0.2,-0.225, 0.02])]\n",
     "if not use_real_robot:\n",
     "    for ball in ball_positions:\n",
     "        robot.add_ball(ball[0], ball[1])\n",
@@ -325,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
