--- a/laboratory/Lab6/README
+++ b/laboratory/Lab6/README
@@ -1,1 +1,1 @@
-In this Laboratory there are 2 notebooks that you need to complete. First Impedance_control.ipynb and then Jumping with impedance control.ipynb
+All the instructions for this laboratory are given in the Jupyter Notebook.
