--- a/laboratory/Lab1/(optional) introduction_to_pybullet.ipynb
+++ b/laboratory/Lab1/(optional) introduction_to_pybullet.ipynb
@@ -32,7 +32,7 @@
     "import pybullet as p\n",
     "\n",
     "#setup nice plotting\n",
-    "%matplotlib widget\n",
+    "%matplotlib notebook\n",
     "\n",
     "# we also import other useful libraries\n",
     "import time\n",
@@ -282,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
