--- a/laboratory/Lab1/pd_controller.ipynb
+++ b/laboratory/Lab1/pd_controller.ipynb
@@ -8,13 +8,15 @@
     "\n",
     "We have seen in the previous notebook how to do a simple control loop that read sensors and applied torque commands. However, we did not use the sensor measurements to compute the torque commands.\n",
     "\n",
+    "<img src=\"images/control_loop.png\" width=600>\n",
+    "\n",
     "Now we would like to do our first closed-loop controller. We will design a simple Proportional-Derivative (PD) position controller. The goal of the controller is to compute a command that will move the joints of the robot to a desired position.\n",
     "\n",
     "Assume that we want the first joint, with measurement position $\\theta$, to move to the desired position $\\theta_{des}$. The idea is to apply a command proportional to the error between the measured and desired position (the P in PD controller). The  error is\n",
     "$$\\textrm{error} = (\\theta_{des} - \\theta)$$  and\n",
-    "the controller will be $\\tau = P \\cdot \\textrm{error} = P (\\theta_{des} - \\theta)$ where $P$ is a constant.\n",
+    "the desired torque to apply to the join will be $\\tau = P \\cdot \\textrm{error} = P (\\theta_{des} - \\theta)$ where $P$ is a constant.\n",
     "\n",
-    "However, when using only a term proportional to the position, the controller will tend to create oscillations and get easily unstable (you can try!). It is then a good idea to add a term proportional to the time derivative of the error (the D term). \n",
+    "However, when using only a term proportional to the position, the controller will tend to create oscillations and get easily unstable (you can try!). It is then a good idea to add a term proportional to the time derivative of the error (the D term), i.e. proportional to the velocity.\n",
     "The time derivative of the error is\n",
     "$$\\frac{d}{dt}\\textrm{error} = \\frac{d}{dt}(\\theta_{des} - \\theta) =  \\dot{\\theta}_{des} - \\dot{\\theta}$$\n",
     "\n",
@@ -28,59 +30,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pybullet build time: Jan 29 2023 17:24:52\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#setup nice plotting\n",
     "%matplotlib notebook\n",
     "\n",
-    "# we import useful libraries\n",
+    "# we import useful libraries including numpy for easy algebra and matplot for plotting\n",
     "import time\n",
     "import numpy as np\n",
     "import matplotlib as mp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# we import the helper class / we will use a similar class to work with the real robot\n",
+    "# we import the helper class to work with either the simulation or real robot\n",
     "use_real_robot = False\n",
     "\n",
     "if use_real_robot:\n",
     "    from nyu_finger import NYUFingerReal    \n",
     "else:\n",
     "    from nyu_finger_simulator import NYUFingerSimulator\n",
-    "    "
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-29 17:33:34.205 Python[15567:7609965] ApplePersistenceIgnoreState: Existing state will not be touched. New state will be written to /var/folders/5r/vbxm70j97n13xz8b5hp6stxw0000gn/T/org.python.python.savedState\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "## if we are using the real robot\n",
     "if use_real_robot:\n",
     "    # Triggers the real robot\n",
     "    # Don't forget to turn on the robot first !!!\n",
     "    robot = NYUFingerReal()\n",
+    "    \n",
     "    # Make sure that the motor number matches that on the robot\n",
     "    motor_number = np.array([1,2,3])\n",
     "    robot.initialize('ens1', motor_number)\n",
+    "    \n",
+    "## if we are using the simulation\n",
     "else:\n",
     "    # we can now create a robot simulation\n",
     "    robot = NYUFingerSimulator()"
@@ -103,26 +92,31 @@
     "dt = 0.001\n",
     "num_steps = int(run_time/dt)\n",
     "\n",
-    "# the PD gains\n",
+    "# the PD gains - they are constant so we define them outside the control loop\n",
     "P = np.array([1.5, 1.5, 1.5])\n",
     "D = np.array([0.01, 0.01, 0.01])\n",
     "\n",
-    "# the desired position\n",
+    "# the desired position - also constants\n",
     "q_des = np.array([0.,0.,np.pi/4.])\n",
     "dq_des = np.zeros_like(q_des) # the desired velocity here is 0\n",
     "\n",
-    "# we store information\n",
+    "## we allocate a few vectors to collect data while we do the simulation\n",
     "measured_positions = np.zeros([num_steps,3])\n",
     "measured_velocities = np.zeros_like(measured_positions)\n",
     "desired_torques = np.zeros_like(measured_positions)\n",
     "time = np.zeros([num_steps])\n",
     "\n",
+    "\n",
+    "## this is our main control loop ##\n",
+    "## we do the loop for num_steps ##\n",
     "for i in range(num_steps):\n",
     "    # get the current time\n",
     "    time[i] = dt * i\n",
     "    \n",
-    "    # we get the position and velocities of the joints\n",
+    "    # we read the position and velocities of the joints from the robot or simulation\n",
     "    q, dq = robot.get_state()\n",
+    "    \n",
+    "    # we store these values for later use\n",
     "    measured_positions[i,:] = q\n",
     "    measured_velocities[i,:] = dq\n",
     "    \n",
@@ -211,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
