--- a/laboratory/Lab5/Resolved rate control of the end effector.ipynb
+++ b/laboratory/Lab5/Resolved rate control of the end effector.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "# Resolved-rate control of the end-effector\n",
     "\n",
-    "The goal of today's laboratory is to implement a resolved-rate controller to control the end-effector.\n",
+    "The goal of this and the next laboratory is to implement a resolved-rate controller to control the end-effector. You should aim to at least finish Part 1 during Lab 5 and Part 2 during Lab 6. We recommend that you read all the instructions in Part 2 well before Lab 6.\n",
+    "\n",
+    "Last laboratory, we used analytic IK to compute desired positions for the joint angles that would ensure we reach a desired position (touching the pink balls). Then we generated a straight line trajectory in joint space and used the joint PD controller to track this trajectory.\n",
+    "\n",
+    "Here, we will use the fact that $$\\mathcal{V}_{SO}^O = J_O(\\boldsymbol{\\theta}) \\cdot \\dot{\\boldsymbol{\\theta}}$$ \n",
+    "to derive directly a controller acting in the end-effector space,\n",
+    "where $\\boldsymbol{\\theta} = [\\theta_0, \\theta_1, \\theta_2]$ is the vector containing all the joint positions and $J_O$ is the Jacobian used to compute twists in Frame 0.\n",
     "\n",
     "## Instructions\n",
     "Answer all the questions below and submit a pdf with detailed answers to these questions, including the plots through Brightspace. You will also need to submit the Jupyter notebooks with the code used to answer the questions.\n",
@@ -17,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Jan 29 2023 17:24:52\n"
+     ]
+    }
+   ],
    "source": [
     "#setup nice plotting\n",
     "%matplotlib notebook\n",
@@ -50,16 +64,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 1: compute the foot Jacobian\n",
+    "# Part 1: compute the end-effector Jacobian\n",
     "\n",
-    "Write a ``compute_jacobian`` function which computes the Jacobian of the end-effector. The computed Jacobian should be with respect to a frame located at the end-effector but oriented like the spatial frame (Frame O in the figure above). You will need to reuse the kinematics functions written in the previous laboratories.\n",
+    "1. Write a ``compute_jacobian`` function which computes the Jacobian of the end-effector. The computed Jacobian should be with respect to a frame located at the end-effector but oriented like the spatial frame (Frame O in the figure above). You will need to reuse the kinematics functions written in the previous laboratories.\n",
     "\n",
-    "Here make sure to return a 6x3 matrix (you will take the rows corresponding to the linear velocity in the following questions)"
+    "Here make sure to return a 6x3 matrix (you will take the rows corresponding to the linear velocity in the following questions).\n",
+    "\n",
+    "2. To test your Jacobian function, use your code from Lab 4 that makes the robot reach 3 different goals and compute the velocity of the end-effector at each instant of time. Compare the computed velocities with the velocities you get by numerically differentiating the end-effector positions (i.e. by computing $v[t] = \\frac{x[t] - x[t-1]}{\\Delta t}$). \n",
+    "\n",
+    "Here you will ignore the angular velocity and only consider the linear velocity of the end-effector. If we only look at the linear velocity of point O (i.e. the velocity of the end-effector with respect to frame O), we can decompose the Jacobian into two part (the top 3 rows are associated to the angular velocity of the end-effector and the bottom 3 are associated to the linear velocity): $$J_O(\\boldsymbol{\\theta}) = \\begin{bmatrix} J_{O\\omega} \\\\ J_{Ov} \\end{bmatrix}$$\n",
+    "and we can write the velocity equation as\n",
+    "$$\\mathcal{V}_{SO}^O = \\begin{pmatrix} \\omega_O \\\\ v_O \\end{pmatrix} = \\begin{bmatrix} J_{O\\omega} \\\\ J_{Ov} \\end{bmatrix} \\cdot \\dot{\\boldsymbol{\\theta}}$$\n",
+    "\n",
+    "So the linear velocity of the end-effector is $$v_O = J_{Ov} \\dot{\\boldsymbol{\\theta}}$$\n",
+    "\n",
+    "\n",
+    "3. Plot the velocities computed in question 2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,31 +100,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 2: resolved rate control\n",
+    "# Part 2: resolved rate control\n",
     "\n",
     "## End-effector velocities\n",
     "\n",
-    "Last laboratory, we used analytic IK to compute desired positions for the joint angles that would ensure we reach a desired position (touching the pink balls). Then we generated a straight line trajectory in joint space and used the joint PD controller to track this trajectory.\n",
+    "In contrast to Lab 4 where we generated trajectories in \"joint space\", i.e. we had a desired start and goal position for each joint, here we will directly generate trajectories for the end-effector and follow them without ever explicitly computing a desired joint position goal. We will work in \"end-effector space\".\n",
     "\n",
-    "Today, we will use the fact that $$\\mathcal{V}_{SO}^O = J_O(\\boldsymbol{\\theta}) \\cdot \\dot{\\boldsymbol{\\theta}}$$ \n",
-    "to derive directly a controller acting in the foot space. \n",
-    "Here $\\boldsymbol{\\theta} = [\\theta_0, \\theta_1, \\theta_2]$ is the vector containing all the joint positions.\n",
-    "We will generate directly generate trajectories for the foot and follow them without ever explicitly computing the inverse kinematics of the robot.\n",
-    "\n",
-    "If we only look at the linear velocity of point O (i.e. the velocity of the foot with respect to the spatial frame), we can decompose the Jacobian into two part (the top 3 rows are associated to the angular velocity of the foot and the bottom 3 are associated to the linear velocity): $$J_O(\\boldsymbol{\\theta}) = \\begin{bmatrix} J_{O\\omega} \\\\ J_{Ov} \\end{bmatrix}$$\n",
-    "and we can write the velocity equation as\n",
-    "$$\\mathcal{V}_{SO}^O = \\begin{pmatrix} \\omega_O \\\\ v_O \\end{pmatrix} = \\begin{bmatrix} J_{O\\omega} \\\\ J_{Ov} \\end{bmatrix} \\cdot \\dot{\\boldsymbol{\\theta}}$$\n",
-    "\n",
-    "So the linear velocity of the foot is $$v_O = J_{Ov} \\dot{\\boldsymbol{\\theta}}$$\n",
-    "\n",
-    "Because our robot have 3 joints, away from singular configurations, the matrix $J_{Ov}$ (which is 3x3) will be invertible. It means that the joint velocity that achieves a desired foot velocity is\n",
+    "Because our robot have 3 joints, away from singular configurations, the matrix $J_{Ov}$ (which is 3x3) will be invertible. It means that the joint velocity that achieves a desired end-effector velocity is\n",
     "$$ \\dot{\\boldsymbol{\\theta}} = J_{Ov}^{-1} v_O$$\n",
     "\n",
     "## End-effector control\n",
     "\n",
-    "If we have a desired velocity we would like to achieve for the foot, we can then directly convert it into a desired velocity for the joints. Then we could use our joint PD controller where we would remove the P part to track this joint space velocity.\n",
+    "If we have a desired velocity we would like to achieve for the end-effector, we can then directly convert it into a desired velocity for the joints. Then we could use our joint PD controller where we would remove the P part to track this joint space velocity.\n",
     "\n",
-    "Assume we have a reference foot trajectory (e.g. coming from our trajectory generator that create smooth trajectories from a starting point to a desired goal with 0 velocities and accelerations at the beginning and end of the trajectories). At each instant of time, we then get $x_{ref}$ and $\\dot{x}_{ref}$, the desired position and velocity of the foot. Our desired foot velocity (which is different from the target) could then be a combination between the reference velocity and an error correction term to make sure we stay on the trajectory\n",
+    "Assume we have a reference end-effector trajectory (e.g. coming from our trajectory generator that create smooth trajectories from a starting point to a desired goal with 0 velocities and accelerations at the beginning and end of the trajectories). At each instant of time, we then get $x_{ref}$ and $\\dot{x}_{ref}$, the desired position and velocity of the end-effector. Our desired end-effector velocity (which is different from the target) could then be a combination between the reference velocity and an error correction term to make sure we stay on the trajectory\n",
     "$$v_O = \\dot{x}_{ref} + P (x_{ref} - x_{measured})$$\n",
     "\n",
     "and so the desired joint velocities would be\n",
@@ -119,15 +133,15 @@
     "or,\n",
     "2. when $|\\theta_2| < 0.05$ (i.e. we are close to a singularity), we can change the matrix to inverse to make it invertible by replacing $J_{Ov}^{-1}$ by $(J_{Ov} + \\epsilon I)^{-1}$ where $\\epsilon$ is a small number, e.g. 10e-4.\n",
     "\n",
-    "## Questions: goal-reaching\n",
+    "## Question 1: goal-reaching\n",
     "1. Write a resolved-rate controller that solves the goal-reaching tasks from Lab 3 and 4 - generate end-effector trajectories using a 5th order polynomial as in Lab 4.\n",
-    "2. Compare the results with the results from Lab 4 - how does the end-effector trajectory change? Plot the measured end-effector position and velocity of the foot and the reference ones. The quantities should be graphed vs. time (use the Jacobian to get the measured end-effector velocities)\n",
-    "3. Run the experiment on the real robot and analysize the results.\n",
+    "2. Compare the results with the results from Lab 4 - how does the end-effector trajectory change? Plot the measured end-effector position and velocity of the end-effector and the reference ones. The quantities should be graphed vs. time (use the Jacobian to get the measured end-effector velocities)\n",
+    "3. Run the experiment on the real robot and analyze the results.\n",
     "\n",
-    "## Questions: other movements\n",
-    "1. Write a controller that can draw a circle in the x-y plane. We would like to follow the 3D foot trajectory $$x_{ref}(t) = \\begin{pmatrix} 0.3 + 0.05\\cos(\\omega t) \\\\ -0.2 + 0.05 \\sin(\\omega t) \\\\ 0 \\end{pmatrix}$$\n",
+    "## Question 2: other movements\n",
+    "1. Write a controller that can draw a circle in the x-y plane. We would like to follow the 3D end-effector trajectory $$x_{ref}(t) = \\begin{pmatrix} 0.3 + 0.05\\cos(\\omega t) \\\\ -0.2 + 0.05 \\sin(\\omega t) \\\\ 0 \\end{pmatrix}$$\n",
     "where $\\omega = \\pi$ is the frequency of rotation around the circle (frequency of rotation of $0.5Hz$).\n",
-    "2. Plot the measured end-effector position and velocity of the foot and the reference ones. The quantities should be graphed vs. time (use the Jacobian to get the measured end-effector velocities)\n",
+    "2. Plot the measured end-effector position and velocity of the end-effector and the reference ones. The quantities should be graphed vs. time (use the Jacobian to get the measured end-effector velocities)\n",
     "3. Test the controller(s) on the real robot and plot the same plots as for the simulation\n",
     "4. Now write a controller that can do a \"figure 8\" in the x-y plan $$x_{ref}(t) = \\begin{pmatrix} 0.35 + 0.08\\sin(\\omega t) \\\\ -0.15 + 0.08 \\cos(\\omega t) \\sin(\\omega t) \\\\ 0 \\end{pmatrix}$$. Show the same plots as in the previous questions.\n",
     "5. Write a controller that can do a circle in the x-z plane."
@@ -152,11 +166,11 @@
     "\n",
     "# we reset the simulation\n",
     "if not use_real_robot:\n",
-    "    robot.reset_state([0,0,0.2])\n",
+    "    robot.reset_state([0,0,0])\n",
     "\n",
     "    \n",
-    "# we simulate for 6 seconds (2 seconds per goal)\n",
-    "run_time = 6.\n",
+    "# we simulate for 15 seconds (5 seconds per goal)\n",
+    "run_time = 15.\n",
     "dt = 0.001\n",
     "num_steps = int(run_time/dt)\n",
     "\n",
@@ -164,19 +178,23 @@
     "P = np.array([1.5, 1.5, 1.5])\n",
     "D = np.array([0.01, 0.01, 0.01])\n",
     "\n",
-    "# we store information\n",
+    "## we allocate a few vectors to collect data while we do the simulation\n",
+    "# we will store the sensor values (angular position and velocities)\n",
     "measured_positions = np.zeros([num_steps,3])\n",
     "measured_velocities = np.zeros_like(measured_positions)\n",
+    "# we will store the commands sent to the robot\n",
     "desired_torques = np.zeros_like(measured_positions)\n",
+    "# we will store the desired joint trajectories that the PD controller follows\n",
     "desired_positions = np.zeros_like(measured_positions)\n",
     "desired_velocities = np.zeros_like(measured_positions)\n",
+    "# we keep track of time\n",
     "time = np.zeros([num_steps])\n",
-    "\n",
-    "measured_foot_position = np.zeros([num_steps,3])\n",
-    "desired_foot_position = np.zeros([num_steps,3])\n",
+    "# we will store the end effector position (desired and measured)\n",
+    "measured_finger_position = np.zeros([num_steps,3])\n",
+    "desired_finger_position = np.zeros([num_steps,3])\n",
     "\n",
     "# here we create a list of ball positions and display them\n",
-    "ball_positions = [np.array([0.4,-0.056, 0.02]), np.array([0.521,-0.1, 0.02]), np.array([0.2,-0.225, 0.02])]\n",
+    "ball_positions = [np.array([0.597,-0.056]), np.array([0.521,0.12]), np.array([0.3,-0.225])]\n",
     "if not use_real_robot:\n",
     "    for ball in ball_positions:\n",
     "        robot.add_ball(ball[0], ball[1])\n",
@@ -199,14 +217,16 @@
     "    # get the current time and save it\n",
     "    time[i] = dt * i\n",
     "    \n",
-    "    # we get the position and velocities of the joints\n",
+    "    # we read the position and velocities of the joints from the robot or simulation\n",
     "    q, dq = robot.get_state()\n",
+    "    \n",
+    "    # we store these values for later use\n",
     "    measured_positions[i,:] = q\n",
     "    measured_velocities[i,:] = dq\n",
     "    \n",
-    "    # save the current position of the foot using the FK function\n",
+    "    # save the current position of the fingertip using the FK function\n",
     "    pose = forward_kinematics(q)\n",
-    "    measured_foot_position[i,:] = pose[0:3,3]\n",
+    "    measured_finger_position[i,:] = pose[0:3,3]\n",
     "    \n",
     "    # controller: TODO HERE IMPLEMENT YOUR CONTROLLER TO REACH ALL 3 TARGETS\n",
     "    # the goal here is to compute q_des and dq_des that the PD controller will follow\n",
@@ -242,16 +262,16 @@
    },
    "outputs": [],
    "source": [
-    "def plot_foot_trajectory(foot_position, ball_positions):\n",
+    "def plot_finger_trajectory(finger_position, ball_positions):\n",
     "    \"\"\"\n",
-    "    plots the position of the foot in 2D and the position of the spatial frame {s}\n",
+    "    plots the position of the finger in 2D and the position of the spatial frame {s}\n",
     "    we assume that the time varying x variable is in x_pos and that the y variable is in y_pos\n",
     "    \"\"\"\n",
     "    fig = plt.figure(figsize=(6,6))\n",
     "    ax = fig.add_subplot(111)\n",
-    "    plt.plot(foot_position[:,0],foot_position[:,1], 'b')\n",
-    "    plt.xlabel('foot x position [m]')\n",
-    "    plt.ylabel('foot y position [m]')\n",
+    "    plt.plot(finger_position[:,0],finger_position[:,1], 'b')\n",
+    "    plt.xlabel('finger x position [m]')\n",
+    "    plt.ylabel('finger y position [m]')\n",
     "    plt.xlim([-l1-l2+l0-0.05,l0+l1+l2+0.05])\n",
     "    plt.ylim([-l1-l2-0.05, l1+l2+0.05])\n",
     "    plt.plot([0],[0],'o',markersize=15,color='r')\n",
@@ -261,8 +281,20 @@
     "        ax.annotate('Goal position', xy=(ball[0]-0.2,0.05+ball[1]), xytext=(30,0), textcoords='offset points')\n",
     "    ax.annotate('Spatial frame {s}', xy=(-0.03,-0.005), xytext=(30,0), textcoords='offset points')\n",
     "    \n",
+    "    fig = plt.figure()\n",
+    "    \n",
+    "    plt.subplot(3,1,1)\n",
+    "    plt.plot(time, measured_finger_position[:,0], 'b-', time, desired_finger_position[:,0], '--k')\n",
+    "    plt.ylabel(r'$x$')\n",
+    "    plt.subplot(3,1,2)\n",
+    "    plt.plot(time, measured_finger_position[:,1], 'b-', time, desired_finger_position[:,1], '--k')\n",
+    "    plt.ylabel(r'$y$')\n",
+    "    plt.subplot(3,1,3)\n",
+    "    plt.plot(time, measured_finger_position[:,2], 'b-', time, desired_finger_position[:,2], '--k')\n",
+    "    plt.ylabel(r'$z$')\n",
+    "    plt.xlabel('Time [s]')\n",
     "\n",
-    "plot_foot_trajectory(measured_foot_position, ball_positions)"
+    "plot_finger_trajectory(measured_finger_position, ball_positions)"
    ]
   },
   {
@@ -325,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
