--- a/laboratory/Lab5/Resolved rate control of the end effector.ipynb
+++ b/laboratory/Lab5/Resolved rate control of the end effector.ipynb
@@ -23,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pybullet build time: Jan 29 2023 17:24:52\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#setup nice plotting\n",
     "%matplotlib notebook\n",
@@ -84,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +186,7 @@
     "desired_finger_position = np.zeros([num_steps,3])\n",
     "\n",
     "# here we create a list of ball positions and display them\n",
-    "ball_positions = [np.array([0.597,-0.056]), np.array([0.521,0.12]), np.array([0.3,-0.225])]\n",
+    "ball_positions = [np.array([0.4,-0.056, 0.02]), np.array([0.521,-0.1, 0.02]), np.array([0.2,-0.225, 0.02])]\n",
     "if not use_real_robot:\n",
     "    for ball in ball_positions:\n",
     "        robot.add_ball(ball[0], ball[1])\n",
