fixed minor typo

--- a/project2023/project.ipynb
+++ b/project2023/project.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ROB2004 Final Project - pushing an object\n",
+    "# ROB2004 Final Project - pick and place objects\n",
     "\n",
-    "The goal of this project is to resolve a simple manipulation task.\n",
+    "The goal of this project is to solve a simple manipulation task: picking up objects and moving them in a bowl.\n",
     "\n",
     "## Instructions\n",
     "* Answer all questions in the notebook\n",
