--- a/Lab5/Resolved Rate Control of the End Effector -- Gayatri and El.ipynb
+++ b/Lab5/Resolved Rate Control of the End Effector -- Gayatri and El.ipynb
@@ -357,27 +357,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gayat\\AppData\\Local\\Temp\\ipykernel_8684\\862885908.py:19: RuntimeWarning: invalid value encountered in arccos\n",
+      "C:\\Users\\gayat\\AppData\\Local\\Temp\\ipykernel_19400\\862885908.py:19: RuntimeWarning: invalid value encountered in arccos\n",
       "  theta2_plus = np.arccos( (l_des**2 - l1**2 - l2**2) / (2*l1*l2) )\n"
-     ]
-    },
-    {
-     "ename": "error",
-     "evalue": "Not connected to physics server.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8684\\1772821902.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    146\u001b[0m     \u001b[1;31m# we send them to the robot and do one simulation step\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    147\u001b[0m     \u001b[0mrobot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msend_joint_torque\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjoint_torques\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 148\u001b[1;33m     \u001b[0mrobot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\onedrive\\desktop\\rob2004\\ROB2004\\Lab5\\nyu_finger_simulator.py\u001b[0m in \u001b[0;36mstep\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     96\u001b[0m         \"\"\"\n\u001b[0;32m     97\u001b[0m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 98\u001b[1;33m         \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstepSimulation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     99\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    100\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0madd_ball\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx_des\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_des\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31merror\u001b[0m: Not connected to physics server."
      ]
     }
    ],
@@ -405,8 +393,8 @@
     "num_steps = int(run_time/dt)\n",
     "\n",
     "# the PD gains\n",
-    "P = np.array([1.5, 1.5, 1.5])*20\n",
-    "D = np.array([0.01, 0.01, 0.01])*10\n",
+    "P = np.array([1.5, 1.5, 1.5])*10\n",
+    "D = np.array([0.01, 0.01, 0.01])*30\n",
     "\n",
     "## we allocate a few vectors to collect data while we do the simulation\n",
     "# we will store the sensor values (angular position and velocities)\n",
@@ -502,23 +490,26 @@
     "\n",
     "    #dtheta_des will be desired joint velocity\n",
     "    if (abs(q[2]) < 0.05):\n",
-    "        dtheta_des = np.linalg.inv(jacobian[3:] + eps*np.eye(3)) @ v_O\n",
+    "        invJacobian = np.linalg.inv(jacobian[3:] + eps*np.eye(3))\n",
     "    else: \n",
-    "        dtheta_des = np.linalg.inv(jacobian[3:]) @ v_O\n",
+    "        invJacobian = np.linalg.inv(jacobian[3:])\n",
+    "        \n",
+    "    dtheta_des = invJacobian @ v_O\n",
     "    \n",
     "    t += dt\n",
     "    \n",
+    "    \n",
     "    inv_kinematics_theta_all = inverse_kinematics(q_ref[0],q_ref[1])\n",
-    "    # we save the desired positions/velocities for later plotting \n",
     "    if (len(inv_kinematics_theta_all) == 2):\n",
     "        inv_kinematics_theta = inv_kinematics_theta_all[1]\n",
     "    else:\n",
     "        inv_kinematics_theta = inv_kinematics_theta_all[0]\n",
     "    \n",
-    "    #print(\"theta from inverse kinematics: \\n\",inv_kinematics_theta)\n",
-    "#     desired_positions[i,:] = q_ref\n",
     "    desired_positions[i,:] = np.array([inv_kinematics_theta[0,0],inv_kinematics_theta[1,0],inv_kinematics_theta[2,0]])\n",
-    "    desired_velocities[i,:] = dq_ref\n",
+    "    \n",
+    "    desired_velocities[i,:] = invJacobian @ dq_ref\n",
+    "    \n",
+    "    desired_finger_position[i,:] = q_ref\n",
     "\n",
     "    ##PD controller\n",
     "    d_error = dtheta_des - dq # the velocity error for all the joints\n",
