--- a/Notebooks/Forward_Kinematics_examples.ipynb
+++ b/Notebooks/Forward_Kinematics_examples.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## some basics transforms\n",
+    "## some basic transforms\n",
     "\n",
     "We define below basic functions to get homogeneous transforms that correspond to pure translations and rotations around x,y or z axes"
    ]
@@ -345,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
