added notebooks for inverse geom

--- a/Notebooks/Forward_Kinematics_examples.ipynb
+++ b/Notebooks/Forward_Kinematics_examples.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Forward Kinematics of the ABB robot\n",
     "\n",
-    "We would like to compute the forward kinematics of the ABB [IRB 910SC](https://new.abb.com/products/robotics/robots/scara-robots/irb-910sc) robot seen in class. \n",
+    "We would like to compute the forward kinematics of the ABB [IRB 910SC](https://new.abb.com/products/3HAC056161-001/irb-910sc) robot seen in class. \n",
     "\n",
     "<img src=\"./figs/ABB_robot.jpg\" width=\"300\">\n",
     "\n",
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#setup nice plotting\n",
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "\n",
     "# we import useful libraries\n",
     "import time\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
