robot direction configuration added.

--- a/Lab/Lab1/00-sensors_and_actuators.ipynb
+++ b/Lab/Lab1/00-sensors_and_actuators.ipynb
@@ -41,6 +41,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +472,7 @@
     "\n",
     "# below is a sample code to run the simulation / collect sensor and command data\n",
     "\n",
-    "run_time = 5 # Duration of the experiment in seconds. Feel free to change it\n",
+    "run_time = 10 # Duration of the experiment in seconds. Feel free to change it\n",
     "dt = 0.01 # How frequently you run the control. Here we are running it at 100Hz (100 times per second).\n",
     "\n",
     "## Let's make sure lists so we can record the state of our robot and plot it later\n",
@@ -488,7 +495,7 @@
     "    \n",
     "    # we compute the desired torques\n",
     "    # here we send a constant torque to each joint. You should add your own code here to compute it based on the PD control rule.\n",
-    "    joint_torques = np.array([0.1,0.,0.])\n",
+    "    joint_torques = np.array([0.2,0.,0.])\n",
     "\n",
     "    desired_torques.append(joint_torques)\n",
     "    # we send them to the robot\n",
@@ -507,7 +514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "rob2004",
    "language": "python",
    "name": "python3"
   },
@@ -521,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
