--- a/Lab/Lab1/00-sensors_and_actuators.ipynb
+++ b/Lab/Lab1/00-sensors_and_actuators.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# The NYU finger robot\n",
     "\n",
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "`launch_passive` requires that the Python script be run under `mjpython` on macOS",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mNYUFinger\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msim\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m NYUFingerSimulator\n\u001b[0;32m----> 2\u001b[0m robot_sim \u001b[38;5;241m=\u001b[39m \u001b[43mNYUFingerSimulator\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Coding/ROB2004/NYUFinger/sim.py:29\u001b[0m, in \u001b[0;36mNYUFingerSimulator.__init__\u001b[0;34m(self, render, dt, xml_path)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrender_ds_ratio \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(\u001b[38;5;241m1\u001b[39m, _render_dt \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m dt)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m render:\n\u001b[0;32m---> 29\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mviewer \u001b[38;5;241m=\u001b[39m \u001b[43mmujoco\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mviewer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlaunch_passive\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrender \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mviewer\u001b[38;5;241m.\u001b[39mcam\u001b[38;5;241m.\u001b[39mdistance \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3.0\u001b[39m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/mujoco/viewer.py:493\u001b[0m, in \u001b[0;36mlaunch_passive\u001b[0;34m(model, data, key_callback, show_left_ui, show_right_ui)\u001b[0m\n\u001b[1;32m    491\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    492\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(_MJPYTHON, _MjPythonBase):\n\u001b[0;32m--> 493\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    494\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m`launch_passive` requires that the Python script be run under \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    495\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m`mjpython` on macOS\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    496\u001b[0m     )\n\u001b[1;32m    497\u001b[0m   _MJPYTHON\u001b[38;5;241m.\u001b[39mlaunch_on_ui_thread(\n\u001b[1;32m    498\u001b[0m       model,\n\u001b[1;32m    499\u001b[0m       data,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    503\u001b[0m       show_right_ui,\n\u001b[1;32m    504\u001b[0m   )\n\u001b[1;32m    506\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m handle_return\u001b[38;5;241m.\u001b[39mget()\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: `launch_passive` requires that the Python script be run under `mjpython` on macOS"
+     ]
+    }
+   ],
    "source": [
     "from NYUFinger.sim import NYUFingerSimulator\n",
     "robot_sim = NYUFingerSimulator()"
@@ -162,6 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('g')\n",
     "q, dq = robot_sim.get_state()\n",
     "print('Joint Position:')\n",
     "print(q)\n",
@@ -521,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
