minor bugs fixed.

--- a/Lab/Lab2/Forward_Kinematics.ipynb
+++ b/Lab/Lab2/Forward_Kinematics.ipynb
@@ -22,9 +22,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#setup nice plotting\n",
-    "%matplotlib notebook\n",
-    "\n",
     "# we import useful libraries\n",
     "import time\n",
     "import numpy as np\n",
@@ -197,6 +194,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Real Robot?\n",
+    "If you're running the notebook on the real robot, first make sure you reset the sensors as you did in previous labs so the robot knows where it is. Specifically, first carefully move the robot's joints so that it looks like the following picture and then run the reset command in the next cell. If you're doing things in simulation, you don't need to worry about it.\n",
+    "\n",
+    "![image.png](images/robot_home.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "robot.reset_sensors()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -231,7 +247,7 @@
     "desired_positions = np.zeros_like(measured_positions)\n",
     "desired_velocities = np.zeros_like(measured_positions)\n",
     "# we keep track of time\n",
-    "time = np.zeros([num_steps])\n",
+    "t = np.zeros([num_steps])\n",
     "# we will store the end effector position (desired and measured)\n",
     "measured_foot_position = np.zeros([num_steps,3])\n",
     "desired_foot_position = np.zeros([num_steps,3])\n",
@@ -241,7 +257,7 @@
     "## we do the loop for num_steps ##\n",
     "for i in range(num_steps):\n",
     "    # get the current time\n",
-    "    time[i] = dt * i\n",
+    "    t[i] = dt * i\n",
     "    \n",
     "    # we read the position and velocities of the joints from the robot or simulation\n",
     "    q, dq = robot.get_state()\n",
@@ -251,7 +267,7 @@
     "    measured_velocities[i,:] = dq\n",
     "    \n",
     "    # we get the current desired positions and velocities from the trajectory generator\n",
-    "    q_des, dq_des = generate_trajectory(time[i], type_of_trajectory)\n",
+    "    q_des, dq_des = generate_trajectory(t[i], type_of_trajectory)\n",
     "    \n",
     "    desired_positions[i,:] = q_des\n",
     "    desired_velocities[i,:] = dq_des\n",
